<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportEventFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/text_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/text_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/text_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"/>

        <Button
            android:id="@+id/button_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/select" />

        <ImageView
            android:id="@+id/img_event_pic"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/report" />
    </LinearLayout>

</FrameLayout>