<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:ads="http://schemas.android.com/apk/res-auto"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="xiaoguangd.socialplayground129.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!-- username tag-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"/>
        <!-- username edit area-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="30"
            android:id="@+id/editTextLogin"
            android:layout_gravity="center_horizontal" />
        <!-- password tag-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/password" />

        <!-- password edit area-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="30"
            android:layout_gravity="center_horizontal" />

        <!-- button to login-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="end"
            android:id="@+id/submit" />

        <!-- button to register-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="end"
            android:id="@+id/register" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/fragment_container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="horizontal"-->
    <!--tools:context="xiaoguangd.socialplayground129.MainActivity">-->

    <!--&lt;!&ndash;<fragment android:name="xiaoguangd.socialplayground129.eventFragment"&ndash;&gt;-->
    <!--&lt;!&ndash;android:id="@+id/event_fragment"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_width="match_parent">&ndash;&gt;-->
    <!--&lt;!&ndash;</fragment>&ndash;&gt;-->

    <!--<RelativeLayout-->
    <!--android:layout_width="200dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:id="@+id/event_container">-->
    <!--</RelativeLayout>-->

    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:id="@+id/comment_container">-->
    <!--</RelativeLayout>-->
    <!--</LinearLayout>-->